HW VAAPI acceleration is not activated on X11 only build
Categories
(Core :: Audio/Video: Playback, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox117 | --- | fixed |
People
(Reporter: s.zharkoff, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:109.0) Gecko/20100101 Firefox/116.0
Steps to reproduce:
Compiled firefox 116b4 without wayland
Actual results:
Got FEATURE_FAILURE_VIDEO_DECODING_TEST_FAILED n about:support and HW decoding disabled because of that, on the same hardware (Ryzen 6800U , mesa 23.1.2) where it worked OK when firefox was build with wayland support, but still executed on pure Xorg.
Expected results:
Decode video with VAAPI with less CPU and battery usage.
| Reporter | ||
Comment 1•2 years ago
|
||
fixed is with the following patch
--- a/widget/gtk/GfxInfo.cpp 2023-07-13 22:43:10.335400834 +0300
+++ b/widget/gtk/GfxInfo.cpp 2023-07-13 22:51:31.886829775 +0300
@@ -1282,13 +1282,13 @@
return ret;
}
bool probeHWDecode = false;
-#ifdef MOZ_WAYLAND
+
probeHWDecode =
mIsAccelerated &&
(*aStatus == nsIGfxInfo::FEATURE_STATUS_OK ||
StaticPrefs::media_hardware_video_decoding_force_enabled_AtStartup() ||
StaticPrefs::media_ffmpeg_vaapi_enabled_AtStartup());
-#endif
+
if (probeHWDecode) {
GetDataVAAPI();
GetDataV4L2();
So I believe that simply was missed from the recent hard work to make X11 and Wayland builds independent.
Comment 2•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Audio/Video: Playback' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 3•2 years ago
|
||
Hello martin, would you mind to take a look on this one? Thanks!
| Assignee | ||
Comment 4•2 years ago
|
||
Sure, will look at it.
| Assignee | ||
Comment 5•2 years ago
|
||
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
Comment 7•2 years ago
|
||
| bugherder | ||
Description
•