Bug 1843425 [Linux] Probe HW decoding on X11 too r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D183858